<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@drawable/ic_launcher_foreground">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            android:text="@string/pre_o_da_gasolina"
            android:background="@color/teal_200"/>

    <TextView
            android:layout_marginTop="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_da_gasolina"
            android:textSize="20sp"
            android:textColor="#000000"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/EditGasolinePrice"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/litros"
            android:textSize="20sp"
            android:textColor="#000000"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/EditLiters"/>

    <Button
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            android:textAllCaps="true"
            app:backgroundTint="@color/black"
            android:layout_gravity="center"
            android:id="@+id/ButtonCalculate"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:textColor="#000000"/>

    <TextView
            android:layout_width="150sp"
            android:layout_height="30sp"
            android:text=""
            android:id="@+id/Price"
            android:textSize="20sp"
            android:textColor="#000000"/>




</LinearLayout>